--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
   <div id="container">
     <header id="header-top">
+
+      <div id="logo">
+        <h1>Lista de tarefas</h1>
+      </div>
     
       <nav id="nav-top">
 
@@ -29,7 +33,19 @@
 
       </nav>
 
+      <i class="far fa-calendar-check"></i>
+      
+
     </header>
+
+    <main id="main-content">
+      <section>
+        <div id="tarefas">
+
+        </div>
+      </section>
+    </main>
+
   </div> <!--CONTAINER-->
   
 </body>
