--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
 
       </nav>
 
-      <i class="far fa-calendar-check"></i>
-      
-
     </header>
 
     <main id="main-content">
       <section>
+        <h2>
+          <i class="far fa-calendar-check"></i>
+          Lista de tarefas
+        </h2>
         <div id="tarefas">
 
         </div>
