--- a/index.html
+++ b/index.html
@@ -41,13 +41,29 @@
           <i class="far fa-calendar-check"></i>
           Lista de tarefas
         </h2>
-        <div id="tarefas">
 
+        <div id="tarefas">
+          <form action="">
+            <input type="text" placeholder="Insira uma tarefa" id="input-tarefas">
+            <button class="btn" type="button" onclick="tarefa()">Adicionar</button>
+          </form>
         </div>
+
+        <div id="insere-tarefa">
+          <ol id="ol">
+
+          </ol>
+        </div>
+
       </section>
     </main>
 
+    <footer id="footer">
+
+    </footer>
+
   </div> <!--CONTAINER-->
-  
+  <script src="./assets/js/index.js">
+  </script>
 </body>
 </html>
